APIs/netboxdemo.com/2.4/java-client/docs/Rack.md


# Rack


## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**comments** | **String** |  |  [optional] |
|**created** | **LocalDate** |  |  [optional] [readonly] |
|**customFields** | **Object** |  |  [optional] |
|**descUnits** | **Boolean** | Units are numbered top-to-bottom |  [optional] |
|**displayName** | **String** |  |  [optional] [readonly] |
|**facilityId** | **String** |  |  [optional] |
|**group** | [**NestedRackGroup**](NestedRackGroup.md) |  |  [optional] |
|**id** | **Integer** |  |  [optional] [readonly] |
|**lastUpdated** | **OffsetDateTime** |  |  [optional] [readonly] |
|**name** | **String** |  |  |
|**role** | [**NestedRackRole**](NestedRackRole.md) |  |  [optional] |
|**serial** | **String** |  |  [optional] |
|**site** | [**NestedSite**](NestedSite.md) |  |  |
|**tags** | **List&lt;String&gt;** |  |  [optional] |
|**tenant** | [**NestedTenant**](NestedTenant.md) |  |  [optional] |
|**type** | [**Type**](Type.md) |  |  [optional] |
|**uHeight** | **Integer** |  |  [optional] |
|**width** | [**Width**](Width.md) |  |  [optional] |



