APIs/netboxdemo.com/2.8/java-client/docs/Rack.md


# Rack


## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**assetTag** | **String** | A unique tag used to identify this rack |  [optional] |
|**comments** | **String** |  |  [optional] |
|**created** | **LocalDate** |  |  [optional] [readonly] |
|**customFields** | **Object** |  |  [optional] |
|**descUnits** | **Boolean** | Units are numbered top-to-bottom |  [optional] |
|**deviceCount** | **Integer** |  |  [optional] [readonly] |
|**displayName** | **String** |  |  [optional] [readonly] |
|**facilityId** | **String** | Locally-assigned identifier |  [optional] |
|**group** | [**NestedRackGroup**](NestedRackGroup.md) |  |  [optional] |
|**id** | **Integer** |  |  [optional] [readonly] |
|**lastUpdated** | **OffsetDateTime** |  |  [optional] [readonly] |
|**name** | **String** |  |  |
|**outerDepth** | **Integer** | Outer dimension of rack (depth) |  [optional] |
|**outerUnit** | [**OuterUnit**](OuterUnit.md) |  |  [optional] |
|**outerWidth** | **Integer** | Outer dimension of rack (width) |  [optional] |
|**powerfeedCount** | **Integer** |  |  [optional] [readonly] |
|**role** | [**NestedRackRole**](NestedRackRole.md) |  |  [optional] |
|**serial** | **String** |  |  [optional] |
|**site** | [**NestedSite**](NestedSite.md) |  |  |
|**status** | [**Status6**](Status6.md) |  |  [optional] |
|**tags** | **List&lt;String&gt;** |  |  [optional] |
|**tenant** | [**NestedTenant**](NestedTenant.md) |  |  [optional] |
|**type** | [**Type6**](Type6.md) |  |  [optional] |
|**uHeight** | **Integer** | Height in rack units |  [optional] |
|**width** | [**Width**](Width.md) |  |  [optional] |



